<resources>
    <string name="app_name">operacao_calculada</string>
    <string name="open_nav">Matemática Abrir</string>
    <string name="close_nav">Matemática Fechar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calcular">Calcular</string>
    <string name="valor_em_euro">Valor em Euro</string>
    <string name="valor_em_dolar">Valor em Dolar</string>
    <string name="qual_o_valor_em_dolar">Qual o seu valor em dolar ?</string>
    <string name="qual_o_valor_em_real">Informe o seu valor em real ?</string>
    <string name="qual_o_valor_em_euro">Qual o seu valor em euro ?</string>
    <string name="informe_valor">Informe o valor\n</string>
    <string name="informe_valor_capital">"Informar Valor do Capital "</string>
    <string name="informe_taxas_juros">"Informar a taxas de juros "</string>
    <string name="informe_tempo_rendimento">"Informar o tempo de rendimento "</string>
    <string name="title_activity_menu_fisica">Menu_Fisica</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="txt_resultado">Resultado</string>
    <string name="txt_titulo_ph">Escala de PH</string>
    <string name="txt_escolha_um_numero">Escolha um número de 0 a 14</string>
    <string name="hint_numero_ph">Número</string>
    <string name="txt_BtnConfirmar">Confirmar</string>
    <string name="txt_button_Calcular">Calcular\n</string>

    <string name="app_name1">beber água - lembrete</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="text_button_calcular"> Calcular Ingestão Diária </string>
    <string name="text_button_lembrete"> Lembrete </string>
    <string name="text_button_alarme"> Alarme </string>
    <string name="text_hora"> 00 </string>
    <string name="text_dois_pontos"> : </string>
    <string name="text_dois_minutos"> 00 </string>
    <string name="toast_informe_peso">Informe o seu peso</string>
    <string name="toast_informe_idade">Informe a sua idade</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes ?</string>
    <string name="alarme_mensagem">Hora de Beber Água</string>

</resources>