<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.matematica.Conversor_Moedas_Fragmento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/moedas" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/qual_o_valor_em_real"
            />

        <EditText
            android:id="@+id/edit_valor"
            android:layout_width="160sp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:hint="Valor"
            android:background="#E1E1E1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:inputType="numberDecimal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/qual_o_valor_em_dolar"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_dolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#E1E1E1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:text="@string/valor_em_dolar"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:text="@string/qual_o_valor_em_euro"
            />

        <TextView
            android:id="@+id/text_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/valor_em_euro"
            android:background="#E1E1E1"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCalcular_Moedas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:contentDescription="Botão para calcular"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Finalizar"
            />

    </LinearLayout>

</ScrollView>