<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.quimica.Escalar_Ph_Fragmento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/escalar_ph" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_titulo_ph"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_escolha_um_numero"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="20dp"
            />

        <EditText
            android:id="@+id/editNumero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_numero_ph"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:padding="15dp"
            android:maxLength="2"
            android:digits="0123456789"
            android:inputType="number"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_BtnConfirmar"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/red"
            android:padding="15dp"
            android:layout_marginHorizontal="20dp"
            />

        <ImageView
            android:id="@+id/imgTubo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resultado"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_margin="10dp"
            />

        <ImageView
            android:id="@+id/imgS"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            />

    </LinearLayout>

</ScrollView>