<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".view.quimica.Beber_Agua">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Beber_Agua">

        <View
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/container_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/bebe_agua"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@+id/container_header"
            app:layout_constraintStart_toStartOf="@+id/container_header" />

        <ImageView
            android:id="@+id/ic_redefinir"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_refresh"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@+id/container_header"
            app:layout_constraintEnd_toEndOf="@+id/container_header" />

        <EditText
            android:id="@+id/edit_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:padding="15dp"
            android:textColor="@android:color/holo_blue_bright"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_header" />

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:maxLength="3"
            android:padding="15dp"
            android:textColor="@android:color/holo_blue_bright"
            android:textColorHint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/edit_peso"
            app:layout_constraintTop_toBottomOf="@+id/container_header"
            app:layout_constraintVertical_bias="0.054" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_calcular_diaria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_calcular"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:padding="15dp"
            android:background="@drawable/bg_degrade_button"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/edit_peso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/container_resultado_ml"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/container_resultado_ml"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_calcular_diaria" />

        <TextView
            android:id="@+id/txt_resultado_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="a"
            android:textSize="35sp"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintTop_toTopOf="@+id/container_resultado_ml"
            app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
            app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
            app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>